assets/css/style.css
html {
  background-color: #d3d3d3;
}

/* Set font */
body
 {
  font-family: monospace;
}

/* Remove underline on <a> tags */
a {
  text-decoration: none;
}

/* Header Container 
‣ height 10% of height
‣ push nav to right and h1 to left
‣ align vertically
*/
header {
  display: flex;
  flex-direction: row;
  height: 10%;
  box-sizing: border-box;
  justify-content: space-between;
  align-items: center;
  background-color: #2E2E2E;
}

/* Header title bar */
h1 {
  font-weight: bolder;
  padding: 0.5% 0.5% 0.5% 5%;
  background-color: #DCA8FF;
  color: #2E2E2E;
  font-size: 400%;
  margin: 1% 0;
}

nav {
  width: min-content;
  box-sizing: border-box;
  margin-right: 2%;
}

nav a,
footer a {
  color: #DCA8FF;
  font-size: 150%;
  margin-bottom: 3px;
}

/* Nav ul and footer ul in row and space evenly */
nav ul,
footer ul {
  display: flex;
  flex-direction: row;
  width: max-content;
  justify-content: space-evenly;
}

nav li,
footer li {
  flex-wrap: nowrap;
  height: min-content;
  border-bottom: 3px solid #DCA8FF;
  margin-left: 25px;
  padding: 0 10px;
}

/* Background banner */
#banner {
  width: 100%;
  height: 200px;
  max-height: 200px;
  background: no-repeat center/100% url('https://picsum.photos/1980/1260?random=1');
  
}

figcaption {
  position: absolute;
  right: 0;
  margin-top: 50px;
  overflow: hidden;
}

/* Banner subtitle tag */
figcaption h2{
  padding: 2% 10% 2% 2%;
  background-color: #7319CC;
  color: #DCA8FF;
  font-size: 400%;
  width: max-content;
  border-radius: 4px;
  overflow: clip;
  margin-right: 10px;
}

.body {
  width: 78%;
}

/* About me contatiner set to flex-start(left) */
#about-me {
  display: flex;
  justify-content: flex-start;
  min-width: 98%;
}

/* About me paragraph */
article p {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin: 3% 2%;
  line-height: 2;
}

.about-me {
  display: flex;
  flex-direction: row
}

.about-me img {
  margin: 2%;
  height: 300px;
  max-width: 300px;
  min-width: 300px;
  border-radius: 150px;
}

/* Work container set to flex-start(left) */
#work {
  display: flex;
  justify-content: flex-start;
}

/* Article ul */
article ul {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

/* Card <a> tag for links to code
‣ height 250px
‣ flex direction column reverse to drop the header-card to the bottom of the card
‣ inset shadow causing that darkened effect
*/
a.card {
  border: 5px solid #DCA8FF;
  margin: 25px;
  width: 40%;
  height: 250px;
  display: flex;
  flex-direction: column-reverse;
  border-radius: 8px;
  box-shadow: 
  rgba(0, 0, 0, 0.4)
  0 300px inset;
}

/* Card header tag */
a.card .header-card {
  width: content;
  margin-bottom: 30px;
  padding: 20px;
  background-color: #DCA8FF;
  font-size: 200%;
  color: #7319CC;
}

/* Card and header hover will make the current card and header glow */
a.card:hover,
.header-card:hover .header-card {
  box-shadow:
  inset 0 0 5px #DCA8FF,
  0 0 15px #DCA8FF;
}

/* Sets the background picture of the first card, I had some issues trying to figure out how to make it resize or find another random image when the window is resized*/
a.card:nth-child(1) {
  width: 95%;
  margin-top: 50px;
  background: no-repeat center/100% url('https://picsum.photos/1980/1260?random=2');
}

/* Sets the background picture of the second card */
a.card:nth-child(2){
  background-image: url('https://picsum.photos/600/250?random=3');
}

/* Sets the background picture of the third card */
a.card:nth-child(3){
  background-image: url('https://picsum.photos/600/250?random=4');
}

/* Sets the background picture of the fourth card */
a.card:nth-child(4){
  background-image: url('https://picsum.photos/600/250?random=5');
}

/* Sets the background picture of the fifth card */
a.card:nth-child(5){
  background-image: url('https://picsum.photos/600/250?random=6');
}

/* Sets the background picture of the sixth card */
a.card:nth-child(6){
  background-image: url('https://picsum.photos/600/250?random=7');
}

/* Sets the background picture of the seventh card */
a.card:nth-child(7){
  background-image: url('https://picsum.photos/600/250?random=8');
}

/* Aside headers container and horizontal line */
aside {
  display: flex;
  flex-direction: row;
  justify-content: center;
  border-right: 3px solid #7319CC;
  min-width: 20%;
  max-width: 20%;
  margin: 2% 2% 2% 0;
  padding: 1% 1% 1% 0;
}

/* Aside headers tag */
aside h3,
aside h4,
aside h5 {
  width: min-content;
  display: flex;
  font-size: 400%;
  justify-content: flex-end;
  text-align: right;
  color: #7319CC;
}

/* Footer container */
footer {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}

footer a {
  color: #7319CC;
}

footer ul {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  justify-content: space-evenly;
  margin: 2% 0 2% 0;
}

footer li {
  border-color: #7319CC;
  margin-right: 20px;
}

/* If max screen width < 1200px */
@media screen and (max-width: 1200px){
  /* Allow footer ul and nav ul to wrap*/
  footer ul,
  nav ul {
    flex-wrap: wrap;
  } 

  /* Set all aside headers to font size 300% */
  aside h3,
  aside h4,
  aside h5  {
    font-size: 300%;
  }
  
  .about-me {
    flex-direction: column;
  }
}

/* If max screen width < 800px */
@media screen and (max-width: 800px){
  /* Change header, nav ul, footer ul, and .container to flex direction column and center */
  header,
  nav ul,
  footer ul,
  .container {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  /* Fixes title padding */
  h1 {
    padding: 2%;
  }

  .about-me {
    align-items: center;
  }

  /* Changes aside border to bottom */
  aside {
    border-right: none;
    border-bottom: 3px solid #7319CC;
    max-width: max-content;
    margin: 2% 2% 2% 2%;
  }

  /* Sets width of aside header tags and font size 400% */
  aside h3,
  aside h4,
  aside h5 {
    font-size: 400%;
    width: 100%;
  }

  a.card {
    width: 100%;
  }
  
  a.card .header-card {
    max-width: min-content;
  }

  a.card:nth-child(1){
    margin: 0;
  }
  /* Adds a horizontal margin */
  article p {
    margin: 0 5%;
  }
  /* Fixes list column spacing */
  header li,
  footer li{
    margin: 0 0 5% 0;
  }
}

